--- a/public/css/detalle.css
+++ b/public/css/detalle.css
@@ -9,7 +9,7 @@
 }
 .detalleContent{
     width:100%;
-    height: 550px;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -43,13 +43,13 @@ box-shadow: 10px 10px 3px -6px rgba(7,130,71,1);
 }
 .imgDetalleContent{
      width: 80%;
-    height: 70%;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     position: relative;
-    bottom: 50px;
-    /* overflow:hidden; */
+    bottom: 100px;
+    overflow:hidden;
     -webkit-box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.76);
     -moz-box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.76);
     box-shadow: 10px 10px 18px -6px rgba(0,0,0,0.76);
@@ -90,7 +90,7 @@ transform:scale(1.15);
     border: none;
     border-top-width: 3.8px;
     border-top-style: ridge;
-    width: 350px;
+    width: 80%;
     margin: 0.375em auto;
 }
 
@@ -120,4 +120,84 @@ transform:scale(1.15);
     position: relative;
     top:-80px;
     text-transform: uppercase;
+}
+@media screen and (min-width:480px) and (max-width:991px){
+    .detalleContent{
+        flex-direction: column;
+    }
+    .detalleIzquierda{
+        height: auto;
+        width: 100%;
+    }
+    .detalleDerecha{
+        height: auto;
+        width: 100%;
+    }
+    .imgDetalleContent{
+        width: 100%;
+        height: 300px;
+        display: block;
+        box-shadow: none;
+        bottom: 0;
+        position: relative;
+      left: 10%;
+       
+       
+    }
+    .titulo{
+        top:-40px;
+    }
+}
+@media screen and (min-width:320px) and (max-width:480px){
+    .detalleContent{
+        flex-direction: column;
+        -webkit-box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+        -moz-box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+        box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+    }
+    .detalleIzquierda{
+        height: auto;
+        width: 100%;
+    }
+    .detalleDerecha{
+        height: auto;
+        width: 100%;
+    }
+    .imgDetalleContent{
+        width: 100%;
+        height: 200px;
+        display: block;
+        box-shadow: none;
+        bottom: 0;
+    }
+    .titulo{
+        top:-40px;
+    }
+}
+@media screen and (max-width:320px) {
+    .detalleContent{
+        flex-direction: column;
+        -webkit-box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+        -moz-box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+        box-shadow: -8px 9px 3px -6px rgba(7,130,71,1);
+    }
+    .detalleIzquierda{
+        height: auto;
+        width: 100%;
+    }
+    .detalleDerecha{
+        height: auto;
+        width: 100%;
+    }
+    .imgDetalleContent{
+        display: none;
+    }
+    .iconos{
+        display:none;
+    }
+    .titulo{
+        text-align: center;
+       
+        top:-10px;
+    }
 }
