--- a/public/css/productos.css
+++ b/public/css/productos.css
@@ -109,3 +109,14 @@ transform:scale(1.15);
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
+@media (max-width:320px){
+    .btn {
+        --bs-btn-padding-x: 0.375rem;
+        --bs-btn-padding-y: 0.375rem;
+        --bs-btn-font-size: 0.5rem;
+        margin: 0 5px;
+    }
+    .cardProducto {
+        height: 500px;
+    }
+}
